CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (FLY)

INCLUDE_DIRECTORIES (/usr/include /usr/local/include /usr/local/fcgi/include /usr/local/mxml/include/)

SET (CMAKE_C_FLAGS -g)
#ADD_DEFINITIONS(-g -std=c99)
ADD_DEFINITIONS(-std=c99)
#ADD_DEFINITIONS(-DFY_DEBUG)
ADD_DEFINITIONS(-D_GNU_SOURCE)

INCLUDE (CheckFunctionExists)
CHECK_FUNCTION_EXISTS (epoll_create FY_HAVE_EPOLL)
CHECK_FUNCTION_EXISTS (kqueue FY_HAVE_KQUEUE)

INCLUDE (CheckIncludeFiles)
CHECK_INCLUDE_FILES (malloc.h FY_HAVE_MALLOC_H)
CHECK_INCLUDE_FILES (stdlib.h FY_HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(sys/types.h FY_HAVE_SYS_TYPES_H)

FIND_PACKAGE (Threads)
CONFIGURE_FILE (fy_config.h.in src/fy_config.h)
ADD_SUBDIRECTORY (src bin)
